--- a/rebar.config
+++ b/rebar.config
@@ -1,5 +1,14 @@
+{deps, [
+  {timing, ".*",
+    {git, "https://github.com/lpgauth/timing.git", {branch, "master"}}}
+]}.
+
 {port_specs, [
-  {"priv/httperl_nif.so", ["c_src/httperl.c", "c_src/uriparser.c"]}
+  {"priv/httperl_nif.so", [
+    "c_src/httperl.c",
+    "c_src/picohttpparser.c",
+    "c_src/uriparser.c"
+  ]}
 ]}.
 
 {port_env, [
